--- a/ansible/roles/ruby-app/templates/ruby-app.service.j2
+++ b/ansible/roles/ruby-app/templates/ruby-app.service.j2
@@ -4,16 +4,13 @@ After=network.target
  
 [Service]
 Type=simple
-User=vagrant
 
 WorkingDirectory={{ app_work_directory }}
 
-ExecStart=/home/vagrant/.rbenv/shims/bundle exec puma -b unix:///var/run/puma.sock -e $RAILS_ENV {{ app_work_directory }}/config.ru
-
-# ExecStart={{ app_work_directory }}/bin/bundle exec rake db:migrate && {{ app_work_directory }}/bin/bundle exec puma -b unix:///var/run/puma.sock -e $RAILS_ENV config.ru
+ExecStart=bundle exec puma -b unix:///var/run/puma.sock -e $RAILS_ENV bundle {{ app_work_directory }}/config.ru
 
 
-TimeoutSec=15
+TimeoutSec=10
 Restart=always
 
 [Install]
